--- a/gas/Test.html
+++ b/gas/Test.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="Multi-line Table by lvwzhen" />
     <meta name="twitter:description" content="Multi-line Table design made using Tailwind CSS" />
     <meta name="twitter:image" content="http://tailwindcomponents.com/storage/8416/conversions/temp41738-ogimage.jpg?v=2023-02-13 07:30:00" />
-    <title>Multi-line Table by lvwzhen.</title>
+    <title>Test</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-200">
